--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,9 +116,7 @@ sup {
 .main-container {
     -webkit-border-radius: 0px;
     border-radius: 0px;
-    background: #dadee7;
-    -webkit-box-shadow: 12px 12px 24px #b9bdc4, -12px -12px 24px #fbffff;
-    box-shadow: 12px 12px 24px #b9bdc4, -12px -12px 24px #fbffff;
+    background: #c2d2f18e;
     grid-area: main;
     padding: 1rem;
     width: 100%;
@@ -432,48 +430,6 @@ input.checkbox {
     color: rgb(214, 78, 78);
 }
 
-.line-box-1 {
-    display: flex;
-    flex-direction: row;
-}
-
-.box1,
-.box2,
-.box3,
-.box4 {
-    margin: 1.2rem;
-    padding: 1.3rem;
-    width: 50%;
-    background: rgba( 255, 255, 255, 0.25);
-    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37);
-    backdrop-filter: blur( 20px);
-    -webkit-backdrop-filter: blur( 20px);
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.box1 {
-    border-left: 6px solid rgb(101, 101, 199);
-}
-
-.box2 {
-    border-left: 6px solid rgb(101, 199, 140);
-}
-
-.box3 {
-    border-left: 6px solid rgb(47, 172, 153);
-}
-
-.box4 {
-    border-left: 6px solid rgb(79, 131, 157);
-}
-
-.text-sales {
-    margin: 0 0 20px 0;
-}
-
 .generate-pdf-box {
     display: flex;
 }
@@ -490,32 +446,139 @@ input.checkbox {
     border-radius: 2px;
 }
 
-.line-chart-1,
-.line-chart-2 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    padding: 50px;
-    overflow: hidden;
-}
-
-.canvas {
-    margin: 20px;
-    background: rgba(255, 255, 255, 0.952);
-    box-shadow: 0 8px 22px 0 rgba( 31, 38, 135, 0.37);
-    backdrop-filter: blur( 4px);
-    -webkit-backdrop-filter: blur( 4px);
-    border-radius: 1px;
-    font-size: 2.3rem;
-}
-
-.span.active {
+.span.actives {
     display: flex;
 }
 
-ul li a.active {
+ul li a.actives {
     background: linear-gradient(rgb(15, 176, 125), rgb(15, 140, 100));
 }
+
+main>.sales-order-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.sales-order-container>.sales-graph,
+.sales-report-orders>section,
+.sales-order-type>section {
+    border-radius: 3px;
+}
+
+.sales-order-container>.sales-graph {
+    background: #ffffff;
+    width: 100%;
+    height: 430px;
+    margin: 0 1rem 0 0;
+}
+
+.sales-graph>.sales-title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.sales-title>section {
+    display: flex;
+    flex-direction: row;
+}
+
+.sales-title>h3 {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #323B55;
+    margin: 1rem;
+}
+
+.sales-title>section>ul>li>a {
+    color: #4B61A1;
+    width: 100px;
+    text-align: center;
+    padding: -2rem;
+    margin: .4rem .3rem;
+}
+
+.sales-report-orders>section {
+    background-color: #ffffff;
+    margin: 0 0 2rem 0;
+    padding: 1rem;
+    height: 122px;
+    max-width: 100%;
+    width: 300px;
+}
+
+.sales-report-orders>section>.box-orders>h3,
+.sales-order-type>section>.box-orders>h3 {
+    font-size: 1rem;
+    font-weight: 600;
+    color: #323B55;
+}
+
+.sales-order-container>.sales-order-type {
+    background-color: #ffffff;
+    padding: 1rem;
+    height: 122px;
+    max-width: 100%;
+    width: 100%;
+}
+
+.sales-order-container>.box-middle {
+    margin: 0 1rem;
+}
+
+.sales-book-container {
+    margin: 2rem 0 2rem;
+}
+
+.sales-book-container>article>.sales-graph {
+    width: 100%;
+    height: 450px;
+    background: #fff;
+}
+
+.view-sales-details {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 2rem 0;
+}
+
+.view-sales-details>p {
+    font-size: 1.5rem;
+    font-weight: 600;
+}
+
+.view-sales-details>a {
+    text-decoration: none;
+    color: #323B55;
+}
+
+.view-sales-details>.text--active {
+    color: #3EF47C;
+}
+
+.view-sales-details>.text--total {
+    color: #0500FF;
+}
+
+.view-sales-details>.text--cancelled {
+    color: #E95744;
+}
+
+.view-sales-details>.text--delivered {
+    color: #BBAC84;
+}
+
+.view-sales-details>.text--dineIn {
+    color: #D632DA;
+}
+
+.view-sales-details>.text--pickUp {
+    color: #4A7C97;
+}
+
+
+/**/
 
 .order-summary-1,
 .order-summary-2 {
@@ -573,22 +636,23 @@ ul li a.active {
     .img-logo {
         width: 70px;
     }
-    .line-box-1 {
+    main>.sales-order-container {
         flex-direction: column;
-        padding: 20px;
     }
-    .box1,
-    .box2,
-    .box3,
-    .box4 {
+    .sales-order-container>.sales-graph {
         width: 100%;
     }
-    .line-chart-1,
-    .line-chart-2 {
-        flex-direction: column;
+    .sales-report-orders {
+        margin: 30px 0;
     }
-    .canvas {
-        width: 1000px;
+    .sales-report-orders>section {
+        width: 100%;
+    }
+    .sales-order-container>.sales-order-type {
+        margin: 1rem 0;
+    }
+    .sales-book-container {
+        padding: 0;
     }
     .order-summary-details {
         flex-direction: column;
